--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,9 @@
 spring:
-  config:
-    import: optional:classpath:.env
   data:
     mongodb:
       uri: mongodb+srv://luizgabi:${MONGODB_PASSWORD}@apiluiz.ihmeusb.mongodb.net/login-register?retryWrites=true&w=majority&appName=APILuiz
-  application:
-    name: login-register-app
-    jwt:
-      secret=${JWT_SECRET}:
 
+application:
+  name: login-register-app
+  jwt:
+    secret: ${JWT_SECRET}
