--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,9 @@ application:
     name: ${BRAND_NAME}
   frontend:
     base-url: ${FRONTEND_BASE_URL}
+
+springdoc:
+  api-docs.path: /api-docs
+  swagger-ui.path: /swagger
+  swagger-ui.display-request-duration: true
+  swagger-ui.try-it-out-enabled: true
