--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,9 @@ application:
     base-url: ${FRONTEND_BASE_URL}
 
 springdoc:
-  api-docs.path: /api-docs
-  swagger-ui.path: /swagger
-  swagger-ui.display-request-duration: true
-  swagger-ui.try-it-out-enabled: true
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger
+    display-request-duration: true
+    try-it-out-enabled: true
