--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     mongodb:
       uri: ${MONGODB_URI}
       auto-index-creation: true
+      uuid-representation: standard
 
   mail:
     host: ${MAIL_HOST}
