--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
             <optional>true</optional>
         </dependency>
 
+        <!--Google -->
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
+
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
