--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,10 @@ application:
     name: ${BRAND_NAME}
   frontend:
     base-url: ${FRONTEND_BASE_URL}
+  confirmation:
+    minutes: 45            # expiração do token
+    cooldown-seconds: 60   # intervalo mínimo entre reenvios
+    max-per-day: 5         # teto diário por dia
 
 springdoc:
   api-docs:
